--- a/CSS/style.css
+++ b/CSS/style.css
@@ -37,6 +37,9 @@ p {
     color: #dedede;
     text-align: center;
 }
+path {
+    fill: goldenrod;
+}
 /* -- Wrapper / Clearfix -- */
 .wrapper {
     width:95%;
@@ -64,16 +67,20 @@ color: #dedede
     padding: 1rem 0;
 }
 .hornet-logo {
-    fill: gold;
+    fill: goldenrod;
     width: 20rem;
     height: auto;
 }
 .hover-line {
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-family: 'Courier New', Courier, monospace;
     letter-spacing: .2rem;
     font-size: 2.5rem;
     padding-bottom: 3rem;
-    color: gold;
+    color: goldenrod;
+}
+.hell {
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    color: red;
 }
 .section-content {
     padding: 1rem 0;
@@ -85,5 +92,5 @@ color: #dedede
     text-align: left;
 }
 .copyright {
-    color: gold;
+    color: goldenrod;
 }
